add token generation